[gd_scene load_steps=31 format=3 uid="uid://cj1ge26e5lmgh"]

[ext_resource type="Script" path="res://Scripts/Slime.gd" id="1_nt70p"]
[ext_resource type="Texture2D" uid="uid://b7tpd4fsgdg2v" path="res://Assets/mystic_woods_free_2.1/sprites/characters/slime.png" id="1_velcw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kn43a"]
atlas = ExtResource("1_velcw")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cthcb"]
atlas = ExtResource("1_velcw")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuqgi"]
atlas = ExtResource("1_velcw")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl7gr"]
atlas = ExtResource("1_velcw")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ies26"]
atlas = ExtResource("1_velcw")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwx6h"]
atlas = ExtResource("1_velcw")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ch0"]
atlas = ExtResource("1_velcw")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jop0i"]
atlas = ExtResource("1_velcw")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urgp6"]
atlas = ExtResource("1_velcw")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj0nc"]
atlas = ExtResource("1_velcw")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1jw1"]
atlas = ExtResource("1_velcw")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yw74"]
atlas = ExtResource("1_velcw")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5lu2"]
atlas = ExtResource("1_velcw")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2inu"]
atlas = ExtResource("1_velcw")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fa8i"]
atlas = ExtResource("1_velcw")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6haf1"]
atlas = ExtResource("1_velcw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3wtl"]
atlas = ExtResource("1_velcw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkfsv"]
atlas = ExtResource("1_velcw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar4yq"]
atlas = ExtResource("1_velcw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s82f"]
atlas = ExtResource("1_velcw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5euu"]
atlas = ExtResource("1_velcw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ww5"]
atlas = ExtResource("1_velcw")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67nd1"]
atlas = ExtResource("1_velcw")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d3a2"]
atlas = ExtResource("1_velcw")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avlpy"]
atlas = ExtResource("1_velcw")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gaqn4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn43a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cthcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuqgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl7gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ies26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwx6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ch0")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jop0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urgp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj0nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1jw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yw74")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5lu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2inu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fa8i")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6haf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3wtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkfsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar4yq")
}],
"loop": false,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s82f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5euu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ww5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67nd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d3a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avlpy")
}],
"loop": false,
"name": &"Move",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cmpoi"]
radius = 107.075

[sub_resource type="CircleShape2D" id="CircleShape2D_u01qc"]

[node name="Slime" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 0
collision_mask = 0
script = ExtResource("1_nt70p")

[node name="Anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_gaqn4")
animation = &"Idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, -2, 5, -2, 5, -6, -4, -6)

[node name="PlayerDetectorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectorArea"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_cmpoi")

[node name="AttackDetectorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectorArea"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_u01qc")

[connection signal="body_entered" from="PlayerDetectorArea" to="." method="_on_player_detector_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectorArea" to="." method="_on_player_detector_area_body_exited"]
[connection signal="body_entered" from="AttackDetectorArea" to="." method="_on_attack_detector_area_body_entered"]
[connection signal="body_exited" from="AttackDetectorArea" to="." method="_on_attack_detector_area_body_exited"]
